# CMakeList.txt : CMake project for NanoChip8, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (NanoChip8 "NanoChip8.cpp" "NanoChip8.h" "CPU.cpp" "CPU.h")

# TODO: Add tests and install targets if needed.
